--- a/1_Fibonacci/Python_C/Makefile
+++ b/1_Fibonacci/Python_C/Makefile
@@ -1,9 +1,9 @@
 
 
-all: compile clean
+all: compile
 
 compile:
-	gcc -shared -fPIC Fibonacci.c -o FibonacciLib.so
+	gcc -O3 -shared -fPIC Fibonacci.c -o FibonacciLib.so
 
 clean:
 	rm *~
